# SPDX-FileCopyrightText: 2024 Darshan Phaldesai <dev.darshanphaldesai@gmail.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "cxx-kde-frameworks"
version = "0.1.0"
edition = "2021"
links = "cxx-kde-frameworks"

[dependencies]
cxx = "1.0.121"
cxx-qt = {git = "https://github.com/redstrate/cxx-qt", branch = "work/josh/cmake-qt-modules"}
cxx-qt-lib = { features = ["qt_full"], git = "https://github.com/redstrate/cxx-qt", branch = "work/josh/cmake-qt-modules" }
cxx-qt-lib-extras = { git = "https://github.com/redstrate/cxx-qt", branch = "work/josh/cmake-qt-modules" }

[build-dependencies]
cmake-package = "0.1.4"
cxx-qt-build = { git = "https://github.com/redstrate/cxx-qt", branch = "work/josh/cmake-qt-modules", features = ["link_qt_object_files"] }
