# SPDX-FileCopyrightText: 2024 Darshan Phaldesai <dev.darshanphaldesai@gmail.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "cxx-kde-frameworks"
version = "0.1.0"
edition = "2021"
links = "cxx-kde-frameworks"

[dependencies]
cxx = "1.0.121"
cxx-qt = "0.7.0"
cxx-qt-lib = { features = ["qt_full"], version = "0.7.0" }
cxx-qt-lib-extras = { version = "0.7.0" }

[build-dependencies]
cmake-package = "0.1.5"
cxx-qt-build = { features = ["link_qt_object_files"], version = "0.7.0" }
