# SPDX-FileCopyrightText: 2024 Darshan Phaldesai <dev.darshanphaldesai@gmail.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "kontrast-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.188"
cxx-qt = "0.7.3"
cxx-qt-lib = { version = "0.7.3", features = ["qt_full"]}
cxx-kde-frameworks = { path = "../../" }
rand = "0.8.5"
zbus = { version = "4.4.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"

[build-dependencies]
cxx-qt-build = "0.7.3"
