# SPDX-FileCopyrightText: 2024 Darshan Phaldesai <dev.darshanphaldesai@gmail.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "kontrast-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.192"
cxx-qt = "0.8.0"
cxx-qt-lib = { version = "0.8.0", features = ["qt_full"]}
cxx-kde-frameworks = { path = "../../" }
rand = "0.9.2"
zbus = { version = "5.12.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"

[build-dependencies]
cxx-qt-build = "0.8.0"
