# SPDX-FileCopyrightText: 2024 Darshan Phaldesai <dev.darshanphaldesai@gmail.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "simplemdviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.122"
cxx-qt = "0.7.0"
cxx-qt-lib = { version = "0.7.0",  features = ["qt_full"] }
markdown = "=1.0.0-alpha.17"

[build-dependencies]
cxx-qt-build = "0.7.0"
