# SPDX-FileCopyrightText: 2024 Darshan Phaldesai <dev.darshanphaldesai@gmail.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "simplemdviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.188"
cxx-qt = "0.7.3"
cxx-qt-lib = { version = "0.7.3",  features = ["qt_full"] }
markdown = "1.0.0"

[build-dependencies]
cxx-qt-build = "0.7.3"
